<resources>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Fechar navigation drawer</string>
    <string name="action_settings">Configurações</string>

    <!-- Navigation Bar-->
    <string name="app_name">Divulgar</string>
    <string name="email">geovanefss@gmail.com</string>

    <string name="videos">Vídeos</string>
    <string name="pdfs">PDFs</string>
    <string name="links">Links</string>

    <string name="url">URL</string>
    <string name="nome_item">URL_xx</string>
    <string name="url_item">[url_item]</string>

    <string name="link">Adicionar</string>
    <string name="link_name">Nome</string>
    <string name="link_url">url</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="menu_preference_file_key">com.example.geovane.divulgar.MENU_PREFERENCE_FILE_KEY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_remove">Remover</string>
    <string name="logo">logo</string>

    <string name="erro_nome">Erro</string>
    <string name="erro_url">Erro</string>
</resources>
