<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/img_url"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:text="@string/url"/>

    <TextView
        android:id="@+id/txt_nome"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:text="@string/nome_item"/>

    <TextView
        android:id="@+id/txt_url"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:text="@string/url_item"/>

</LinearLayout>