<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txt_Link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_link_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_link_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_link_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_link_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link_url"
            android:inputType="textUri" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>